--- a/about.html
+++ b/about.html
@@ -12,22 +12,14 @@
         <!link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link rel="stylesheet" href="portfolio.css">
 
-        <nav>
+        <div class="navbar">
             <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="#Projects">Projects</a>
-                </li>
-                <li>
-                    <a href="#Contact Me">Contact Me</a>
-                </li>
+                <a href="index.html">Home</a>
+                <a class="active" href="about.html">About</a>
+                <a href="#Projects">Projects</a>
+                <a href="#Contact Me">Contact Me</a>
             </ul>
-        </nav>
+        </div>
 
         <body>
             <img src=Images/me.jpg alt="Picture of developer" width="150" height="150">
