created indivdual pages for links

--- a/about.html
+++ b/about.html
@@ -16,14 +16,16 @@
             <ul>
                 <a href="index.html">Home</a>
                 <a class="active" href="about.html">About</a>
-                <a href="#Projects">Projects</a>
-                <a href="#Contact Me">Contact Me</a>
+                <a href="projects.html">Projects</a>
+                <a href="contactme.html">Contact Me</a>
             </ul>
         </div>
 
         <body>
-            <img src=Images/me.jpg alt="Picture of developer" width="150" height="150">
-
+            <div class="aboutimg">
+                <img src=Images/me.jpg alt="Picture of developer" width="150" height="150">
+            </div>
+            
             <div class="aboutMe">
             <h2 id="About">About</h2>
             <p>Currently enrolled in the MSU web devolopment bootcamp learnig full stack development. I have always had an interest in computers and first started diving into web deveopment back in highschool 
