--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul>
                 <a class="active" href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#Projects">Projects</a>
-                <a href="#Contact Me">Contact Me</a>
+                <a href="projects.html">Projects</a>
+                <a href="contactme.html">Contact Me</a>
             </ul>
         </div>
         
