--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
              
             <h2 id="projects">Projects</h2>
                 <div class="projects section">
-                    <img src=assets/images/KMN_0440.jpg alt="Password Generator">
-                    <img src=assets/images/KMN_0778.jpg alt="Code Quiz">
-                    <img src=assets/Images/KMN_0411.jpg alt="Day Planner">
+                    <img src=assets/images/KMN_0440 alt="Password Generator">
+                    <img src=assets/images/KMN_0778 alt="Code Quiz">
+                    <img src=assets/Images/KMN_0411 alt="Day Planner">
                 </div>
             <div class="contact">
                 <h2 id="contact_me">Contact Me</h2>
