--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
             <link rel="stylesheet" href="assets/portfolio.css">
+            
             <!fonts>
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet">
@@ -39,10 +40,16 @@
                 </div>
              
             <h2 id="projects">Projects</h2>
-                <div class="projects section">
-                    <img src=/assets/images/KMN_0440 alt="Password Generator">
-                    <img src=/assets/images/KMN_0778 alt="Code Quiz">
-                    <img src=/assets/Images/KMN_0411 alt="Day Planner">
+                <div class="projects-section">
+                    <div class="projects-container">
+                        <img src= assets/Images/KMN_0440.jpg alt="Password Generator">
+                    </div>
+                    <div class= "projects-container">
+                        <img src=assets/Images/KMN_0778.jpg alt="Code Quiz">
+                    </div>
+                    <div class= "projects-container">
+                        <img src=assets/Images/KMN_0411.jpg alt="Day Planner">
+                    </div>
                 </div>
             <div class="contact">
                 <h2 id="contact_me">Contact Me</h2>
