took out fixed navbar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="About Me">
                     <h2 id="about_me">About me</h2>
                     
-                    <p>Currently learning full stack develeopment through MSU's coding Bootcamp. On this page you will find all of
+                    <p>Currently learning full stack web development through MSU's coding Bootcamp. On this page you will find all of
                         my current and preveous work. Giving you a glimpse of what i've learned and how I am progressing as a developer.
                     </p>
                 </div>
